// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselMessage allows style overrides 1`] = `
<MessageWrapper
  disableSafeAreaView={true}
>
  <Carousel
    data={[]}
    indicatorActiveStyle={
      [
        {
          "backgroundColor": "#a1a1a1",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        {
          "backgroundColor": "red",
        },
      ]
    }
    indicatorInactiveStyle={
      [
        {
          "backgroundColor": "#d8d8d8",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        {
          "backgroundColor": "blue",
        },
      ]
    }
    renderItem={[Function]}
    testID="in-app-messaging--carousel"
  />
</MessageWrapper>
`;

exports[`CarouselMessage renders as expected 1`] = `
<MessageWrapper
  disableSafeAreaView={true}
>
  <Carousel
    data={[]}
    indicatorActiveStyle={
      [
        {
          "backgroundColor": "#a1a1a1",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        undefined,
      ]
    }
    indicatorInactiveStyle={
      [
        {
          "backgroundColor": "#d8d8d8",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        undefined,
      ]
    }
    renderItem={[Function]}
    testID="in-app-messaging--carousel"
  />
</MessageWrapper>
`;

exports[`CarouselMessage renders as expected with minimal props 1`] = `
<MessageWrapper
  disableSafeAreaView={true}
>
  <Carousel
    data={[]}
    indicatorActiveStyle={
      [
        {
          "backgroundColor": "#a1a1a1",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        undefined,
      ]
    }
    indicatorInactiveStyle={
      [
        {
          "backgroundColor": "#d8d8d8",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        undefined,
      ]
    }
    renderItem={[Function]}
    testID="in-app-messaging--carousel"
  />
</MessageWrapper>
`;

exports[`CarouselMessage renders items 1`] = `
<CarouselMessageItem
  image={
    {
      "src": "image-src",
    }
  }
  layout="CAROUSEL"
/>
`;
